# strategy-game-battle-mechanics

./: README.md
SGame/: CMakeLists.txt  main.c
